# ultitato

./: Cargo.toml  LICENSE  ctsc  test.js  tsconfig.json
assets/: index.html  play.html
assets/html/: 404.html  index.html  local.html  online.html
assets/js/: local.js  online.js  shared.js
assets/ts/: online.ts
src/: base36.rs  handlers.rs  lib.rs  main.rs  state.rs
ts/: local.ts  shared.ts
